k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-gin
  namespace: go-app
  labels:
    app: web-server-gin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server-gin
  template:
    metadata:
      labels:
        app: web-server-gin
    spec:
      containers:
        - name: web-server-gin
          image: xomrkob/web-server-gin:1.1.59
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
