k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-gin-service
spec:
  selector:
    app: web-server-gin
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
